--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <h1>
                       Vision: <br />
                       <span>
-                      excllence and perfection beyond reproach
+                        excellence and perfection beyond reproach
                       </span>
                     </h1>
                     <p>
@@ -701,7 +701,7 @@
               <input type="email" placeholder="Email" />
             </div>
             <div>
-              <input type="text" placeholder="Pone Number" />
+              <input type="text" placeholder="Phone Number" />
             </div>
             <div>
               <input type="text" class="message-box" placeholder="Message" />
